Fix: 안 쓰는 파일 제거, CSS overflow 속성 삭제

--- a/styles/content/orderPayingCompletionModal.module.scss
+++ b/styles/content/orderPayingCompletionModal.module.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 90%;
   padding: 0 20px 75px;
-  overflow: auto;
   z-index: variable.$MODAL;
   position: absolute;
   bottom: 0;
