--- a/styles/content/registerCashReceiptModal.module.scss
+++ b/styles/content/registerCashReceiptModal.module.scss
@@ -4,7 +4,6 @@
 .wrap {
   width: 100%;
   height: 90%;
-  overflow: auto;
   position: absolute;
   z-index: variable.$MODAL;
   bottom: 0;
