--- a/styles/pages/productPage.module.scss
+++ b/styles/pages/productPage.module.scss
@@ -131,7 +131,6 @@
   }
 
   .option {
-    overflow: auto;
     position: absolute;
     padding-bottom: 126px;
     z-index: 1001;
